--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 
 <body class="is-loading">
-
+s
     <div class="cursor" data-cursor="">
         <div class="inner">
             <div class="circle"><span class="cursor_text"></span></div>
@@ -319,7 +319,7 @@
 
 
 
-                                        &copy; <span id="copyrightYear">2021 </span> <a href="/index.html" title="SMART SD">SMART SD.&nbsp; &nbsp;</a>
+                                        &copy; <span id="copyrightYear">2021 </span> <a title="SMART SD">SMART SD.&nbsp; &nbsp;</a>
                                         <a class="" href="/policy.html">Privacy Policy. &nbsp; &nbsp;</a>
                                         <a class="">&copy; STRATEQ Oil & Gas Sdn. Bhd. 200301032376 (634797-T)</a>
                                     </p>
