--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                     <div class="image-wrapper">
                                         <div class="video-wrapper">
                                             <video autoplay="autoplay" loop="loop" playsinline="" data-poster="">
-                                                <source src="assets/img/home/smartsd.mp4" type="video/mp4">
+                                                <source src="assets/img/home/smartsd.mp4" loading="lazy" type="video/mp4">
                                             </video>
                                         </div>
                                     </div>
