--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                     <div class="video-overlay"></div>
                                     <div class="image-wrapper">
                                         <div class="video-wrapper">
-                                            <video autoplay="autoplay" loop="loop" playsinline="" data-poster="">
+                                            <video autoplay="autoplay" loop="loop" playsinline="">
                                                 <source src="assets/img/home/smartsd.mp4" loading="lazy" type="video/mp4">
                                             </video>
                                         </div>
