Changes in company name
STRATEQ Group to STRATEQ Group of Companies

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>SMART SD | STRATEQ Group</title>
+    <title>SMART SD | STRATEQ Group of Companies</title>
     <meta name="description" content="">
 
 
@@ -155,9 +155,9 @@
 
             <div class="address">
                 <div class="text">
-                    <a href="https://goo.gl/maps/bD2v9JqmQb7eyiJ79" title="STRATEQ Group - Malaysia" class="inner_link">
+                    <a href="https://goo.gl/maps/bD2v9JqmQb7eyiJ79" title="STRATEQ Group of Companies - Malaysia" class="inner_link">
                         <h5>Malaysia</h5>
-                        <p><strong>STRATEQ GROUP</strong><br>Level 5 Block A, Dataran Hamodal, No. 4 Jalan Bersatu 13/4, 46200 Petaling Jaya, Selangor Darul Ehsan, Malaysia.<br><br></p>
+                        <p><strong>STRATEQ Group of Companies</strong><br>Level 5 Block A, Dataran Hamodal, No. 4 Jalan Bersatu 13/4, 46200 Petaling Jaya, Selangor Darul Ehsan, Malaysia.<br><br></p>
                     </a>
 
                     <h5 class="twocol">
@@ -303,9 +303,9 @@
                                     <div class="textrow">
                                         <div class="textcol">
                                             <h5>
-                                                <a href="" class="" title="STRATEQ Group - Malaysia">Malaysia</a>
+                                                <a href="" class="" title="STRATEQ Group of Companies - Malaysia">Malaysia</a>
                                             </h5>
-                                            <p><strong>STRATEQ GROUP</strong><br>Level 5 Block A, Dataran Hamodal,<br>No. 4 Jalan Bersatu 13/4, 46200 Petaling Jaya,<br>Selangor Darul Ehsan, Malaysia.</p>
+                                            <p><strong>STRATEQ Group of Companies</strong><br>Level 5 Block A, Dataran Hamodal,<br>No. 4 Jalan Bersatu 13/4, 46200 Petaling Jaya,<br>Selangor Darul Ehsan, Malaysia.</p>
                                         </div>
 
 
