Adding Montserrat font
For SVG in About page

--- a/about.html
+++ b/about.html
@@ -50,6 +50,9 @@
         <link rel="preload" href="assets/fonts/Graphik-Bold-Web.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="assets/fonts/Graphik-Light-Web.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="assets/fonts/Graphik-Regular-Web.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <link rel="preload" href="assets/fonts/Montserrat/Montserrat-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="assets/fonts/Montserrat/Montserrat-Medium.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="assets/fonts/Montserrat/Montserrat-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     
         <link rel="stylesheet" href="assets/css/app.css">
         <script defer="" src="assets/js/scripts.js"></script>
