--- a/about.html
+++ b/about.html
@@ -347,7 +347,7 @@
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 05</span>
                                     <h4>Self Service Portal</h4>
-                                    <p>Self Service Portal is a website for Dealer to create incident online monitor progress or check historical info. It allows Dealer to create Work Order(WO) for 3rd party, if Vendor Management module enabled.</p>
+                                    <p>Self Service Portal is a website for Dealer to create incident online, monitor progress or check historical info. It allows Dealer to create Work Order (WO) for 3rd party, if Vendor Management module enabled.</p>
                                 </div>
                             </div>
 							 <div class="carousel__plane">
@@ -387,7 +387,7 @@
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 09</span>
                                     <h4>FE App</h4>
-                                    <p>Field Engineer App is a mobile application for FE to accept and work ibn the Service Order, response and action taken will be updated seamlessly to backend for real-time ETAand SLA measures.</p>
+                                    <p>Field Engineer App is a mobile application for FE to accept and work on the Service Order, response and action taken will be updated seamlessly to backend for real-time ETA and SLA measures.</p>
                                 </div>
                             </div>
 							<div class="carousel__plane">
@@ -397,7 +397,7 @@
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 10</span>
                                     <h4>Knowledge Base</h4>
-                                    <p>Knowledge base is amodule proviing user with the information about the system, applications, software or hardware, including organisation specific usr manual or troubleshooting guide, to help end user resolve minor issue to reduce downtime.</p>
+                                    <p>Knowledge base is a module providing user with the information about the system, applications, software or hardware, including organisation specific user manual or troubleshooting guide, to help end user resolve minor issue to reduce downtime.</p>
                                 </div>
                             </div>
 							<div class="carousel__plane">
