--- a/about.html
+++ b/about.html
@@ -252,9 +252,8 @@
                 </div>
                 <div class="columns">
                 <div class="menu_fade column">
-                  <p class="lead full reveal_short"> STRATEQ Group is committed to ensuring that your privacy is protected. We collect information of yourself or your organisation through online forms in this website or emails from you.</p>
                   <p class="lead full reveal_short">SMART SD is designed based on a collaboration model that connects people, tools, processes and automation into a transparent workflow. This workflow connects the work needed, the work happening, and the work done in a persistent location staffed by the people, bots and related tools. The transparency tightens the feedback loop, improves information sharing and enhances team collaboration, keeping the focus on uptime and operational efficiency.</p>
-					<p class="lead full reveal_short">In addition, the inclusion of the loT edge device allows more efficient predictive maintenance and real-time situational awareness of customers' equipment states and health. Eventually as the machine learning model gets better from ingesting more data from calls, requests, and loT edge device enable equipment - a good majority of future tickets raised to the service desk will be automated and raised by the Bot leveraged for our solution.</p>
+				<p class="lead full reveal_short">In addition, the inclusion of the loT edge device allows more efficient predictive maintenance and real-time situational awareness of customers' equipment states and health. Eventually as the machine learning model gets better from ingesting more data from calls, requests, and loT edge device enable equipment - a good majority of future tickets raised to the service desk will be automated and raised by the Bot leveraged for our solution.</p>
                     
                 </div>
                
@@ -433,7 +432,7 @@
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 14</span>
                                     <h4>Vendor Management</h4>
-                                    <p>Configuration Management is a module to setup the name, group, level, combo (parent & child relation) of Configuration Item (CI).</p>
+                                    <p>Vendor Management is a module allows Dealer to extend the service request to 3rd party, where vendor can view and update the WO. Vendor performance will be measure base on the severity set.</p>
                                 </div>
                             </div>
 
