--- a/about.html
+++ b/about.html
@@ -294,7 +294,7 @@
                         <div class="carousel__planes" data-hover="Hold & Drag">
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')" ></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/contract management.png')" ></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 01</span>
@@ -305,7 +305,7 @@
 
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')" ></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/incident.png')" ></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 02</span>
@@ -316,7 +316,7 @@
 
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/dashboard.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 03</span>
@@ -327,7 +327,7 @@
 
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/timeline.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 04</span>
@@ -337,7 +337,7 @@
                             </div>
 							 <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/self service.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 05</span>
@@ -347,7 +347,7 @@
                             </div>
 							 <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/dealer.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 06</span>
