--- a/about.html
+++ b/about.html
@@ -220,7 +220,7 @@
                                 <span class="reveal_wrap"><span class="pre_reveal">About SMART SD</span></span>
                                 
                             </h2>      
-                        </div>
+                        </div>  
                     </div>
                 </div>
             </div>
@@ -294,7 +294,7 @@
                         <div class="carousel__planes" data-hover="Hold & Drag">
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('assets/img/about/')" ></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/asset.png')" ></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 01</span>
@@ -305,7 +305,7 @@
 
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('assets/img/about/')" ></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/incident.png')" ></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 02</span>
@@ -316,7 +316,7 @@
 
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('assets/img/about/')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/dashboard.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 03</span>
@@ -327,7 +327,7 @@
 
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('assets/img/about/')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/timeline.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 04</span>
@@ -337,7 +337,7 @@
                             </div>
 							 <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('assets/img/about/')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/self service.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 05</span>
@@ -347,7 +347,7 @@
                             </div>
 							 <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('assets/img/about/')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/dealer.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 06</span>
@@ -357,7 +357,7 @@
                             </div>
 							<div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/report.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 07</span>
@@ -367,7 +367,7 @@
                             </div>
 							<div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/report.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 08</span>
@@ -377,7 +377,7 @@
                             </div>
 							<div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/feapp.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 09</span>
@@ -387,7 +387,7 @@
                             </div>
 							<div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/knowledge.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 10</span>
@@ -397,7 +397,7 @@
                             </div>
 							<div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/asset.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 11</span>
@@ -407,7 +407,7 @@
                             </div>
 							<div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/inventory.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 12</span>
@@ -417,7 +417,7 @@
                             </div>
 							<div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/message.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 13</span>
@@ -427,7 +427,7 @@
                             </div>
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/vendor.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 14</span>
