--- a/about.html
+++ b/about.html
@@ -367,7 +367,7 @@
                             </div>
 							<div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('assets/img/about/report.png')"></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/config.png')"></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 08</span>
