--- a/about.html
+++ b/about.html
@@ -294,7 +294,7 @@
                         <div class="carousel__planes" data-hover="Hold & Drag">
                             <div class="carousel__plane">
                                 <div class="carousel__image">
-                                    <div class="background-image" data-bg="url('assets/img/about/asset.png')" ></div>
+                                    <div class="background-image" data-bg="url('assets/img/about/contract management.png')" ></div>
                                 </div>
                                 <div class="carousel__text">
                                     <span class="carousel__num font_caps">/ 01</span>
