--- a/team.html
+++ b/team.html
@@ -285,7 +285,7 @@
                     <a href=>
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/1993.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/1993.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -303,7 +303,7 @@
                     <a href="" data-scroll="" data-scroll-speed="-2">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/1995.webp')"></div> 
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/1995.png')"></div> 
                                 </div>
                         </figure>
                         <div class="work_caption">
@@ -323,7 +323,7 @@
                     <a href="">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/1997.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/1997.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -340,7 +340,7 @@
                     <a href="" data-scroll="" data-scroll-speed="-2">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/1999.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/1999.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -360,7 +360,7 @@
                     <a href="">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2000.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2000.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -378,7 +378,7 @@
                     <a href="" data-scroll="" data-scroll-speed="-2">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2002.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2002.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -399,7 +399,7 @@
                     <a href="">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2003.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2003.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -416,7 +416,7 @@
                     <a href="" data-scroll="" data-scroll-speed="-2">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2004.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2004.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -437,7 +437,7 @@
                     <a href="">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2005.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2005.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -456,7 +456,7 @@
                     <a href="" data-scroll="" data-scroll-speed="-2">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2006.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2006.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -476,7 +476,7 @@
                     <a href="">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2009.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2009.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -493,7 +493,7 @@
                     <a href="" data-scroll="" data-scroll-speed="-2">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2011.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2011.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -513,7 +513,7 @@
                     <a href="">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2014.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2014.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -530,7 +530,7 @@
                     <a href="" data-scroll="" data-scroll-speed="-2">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2016.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2016.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -550,7 +550,7 @@
                     <a href="">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2017.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2017.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -567,7 +567,7 @@
                     <a href="" data-scroll="" data-scroll-speed="-2">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2018.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-2" data-bg="url('assets/img/PRS/2018.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
@@ -588,7 +588,7 @@
                     <a href="">
                         <figure class="half_image image_zoom_wrapper">
                             <div class="image_zoom">
-                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2019.webp')"></div>
+                                <div class="banner_img background-image" data-scroll="" data-scroll-speed="-4" data-bg="url('assets/img/PRS/2019.png')"></div>
                             </div>
                         </figure>
                         <div class="work_caption">
