--- a/policy.html
+++ b/policy.html
@@ -99,6 +99,8 @@
                 </div>
             </a>
             <div class="nav_right">
+                <a href="/index.html" class=" font_caps">Home</a>
+
                 <a href="/about.html" class=" font_caps">About</a>
 
                 <a href="/team.html" class=" font_caps">Team</a>
@@ -144,13 +146,15 @@
                     <a href="/about.html" class="inner_link">About</a>
                 </li>
 
+
                 <li class="mobile_link">
                   <a href="mailto:smartsd-enquiry@strateqgroup.com" title="Contact Us" class="">Contact Us</a>
-              </li>
+                </li>
               
-              <li class="mobile_link">
+                <li class="mobile_link">
                   <a href="https://strateqgroup.com/" title="Company" class="">Company</a>
-              </li>
+                </li>
+              
           </ol>
 
           <div class="address">
