--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <title>SMART SD | STRATEQ Group of Companies</title>
+        <title>Our Team | SMART SD | STRATEQ Group of Companies</title>
         <meta name="description" content="">
     
     
