--- a/404.html
+++ b/404.html
@@ -178,6 +178,7 @@
                             <a class="" href="https://twitter.com/strateq_group" target="_blank" rel="noopener noreferrer" title="Twitter">Tw &nbsp; &nbsp;</a>
                             <a class="" href="https://www.linkedin.com/company/strateq/" target="_blank" rel="noopener noreferrer" title="LinkedIn">In &nbsp; &nbsp;</a>
                             <a class="inner_link" href="/policy.html">Privacy Policy. &nbsp; &nbsp;</a>
+                            <a class="" href="/terms.html">Terms. &nbsp; &nbsp;</a>
                         </p>
                     </div>
                 </div>
