--- a/team.html
+++ b/team.html
@@ -178,6 +178,7 @@
                             <a class="" href="https://twitter.com/strateq_group" target="_blank" rel="noopener noreferrer" title="Twitter">Tw &nbsp; &nbsp;</a>
                             <a class="" href="https://www.linkedin.com/company/strateq/" target="_blank" rel="noopener noreferrer" title="LinkedIn">In &nbsp; &nbsp;</a>
                             <a class="inner_link" href="/policy.html">Privacy Policy. &nbsp; &nbsp;</a>
+                            <a class="" href="/terms.html">Terms. &nbsp; &nbsp;</a>
                         </p>
                     </div>
                 </div>
@@ -652,6 +653,7 @@
 
                         &copy; <span id="copyrightYear">2021 </span> <a href="/index.html" title="SMART SD">SMART SD.&nbsp; &nbsp;</a>
                         <a class="" href="/policy.html">Privacy Policy. &nbsp; &nbsp;</a>
+                        <a class="" href="/terms.html">Terms. &nbsp; &nbsp;</a>
                         <a class="">&copy; STRATEQ Oil & Gas Sdn. Bhd. 200301032376 (634797-T)</a>
                     </p>
                 </div>
