--- a/about.html
+++ b/about.html
@@ -55,6 +55,9 @@
         <link rel="preload" href="assets/fonts/Montserrat/Montserrat-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     
         <link rel="stylesheet" href="assets/css/app.css">
+        <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/nav-menu.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
         <script defer="" src="assets/js/scripts.js"></script>
     </head>
     
