--- a/team.html
+++ b/team.html
@@ -52,6 +52,9 @@
         <link rel="preload" href="assets/fonts/Graphik-Regular-Web.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     
         <link rel="stylesheet" href="assets/css/app.css">
+        <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/nav-menu.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
         <script defer="" src="assets/js/scripts.js"></script>
     </head>
     
