Co-authored-by: ShortyJay <ShortyJay@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
     </div>
 
-
+<!--Body Section-->
     <div id="barba-wrapper">
         <div class="barba-container">
             <div data-scroll-container="">
@@ -208,23 +208,12 @@
                     <!-- PRELOAD IMAGE(S) -->
 
                     <div data-scroll-section="">
-                        <section id="q_slide" parallax=".15" opacity="0.1" class="q_slide" wait="false">
-                            <div class="q_slide-inner header_animate active">
-                                <div class="slides">
-                                    <div class="slide is-loaded q_current">
-                                        <div class="image-container">
-                                            <div class="video-overlay"></div>
-                                            <div class="image-wrapper">
-                                                <div class="video-wrapper">
-                                                    <video autoplay="autoplay" loop="loop" muted="muted" playsinline="">
-                                                        <source src="/assets/img/home/smartsd.mp4" loading="lazy" type="video/mp4">
-                                                    </video>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>                    
-                                </div>                   
-                            </div>
+                        <section id="q_slide" parallax=".15" opacity="0.1" class="q_slide" wait="false">            
+                             <div class="video-wrapper">
+                                <video autoplay="autoplay" loop="loop" muted="muted" playsinline="">
+                                     <source src="/assets/img/home/smartsd.mp4" loading="lazy" type="video/mp4">
+                                </video>
+                             </div>  
                         </section>
                     </div>
 
