--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/nav-menu.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/index.css">
     <script defer="" src="assets/js/scripts.js"></script>
 </head>
 
@@ -208,12 +209,14 @@
                     <!-- PRELOAD IMAGE(S) -->
 
                     <div data-scroll-section="">
-                        <section id="q_slide" parallax=".15" opacity="0.1" class="q_slide" wait="false">            
-                             <div class="video-wrapper">
-                                <video autoplay="autoplay" loop="loop" muted="muted" playsinline="">
-                                     <source src="/assets/img/home/smartsd.mp4" loading="lazy" type="video/mp4">
-                                </video>
-                             </div>  
+                        <section id="q_slide" parallax=".15" opacity="0.1" class="q_slide" wait="false">   
+                          <div class="slide">
+                                <div class="video-wrapper">
+                                    <video autoplay="autoplay" loop="loop" muted="muted" playsinline="">
+                                        <source src="/assets/img/home/smartsd.mp4" loading="lazy" type="video/mp4">
+                                    </video>
+                                </div>
+                             </div>                    
                         </section>
                     </div>
 
