--- a/index.htm
+++ b/index.htm
@@ -1,27 +1,10 @@
-﻿
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Fleava | Indonesia &amp; Singapore’s leading Creative Digital Marketing Agency</title>
+        <title>Dheneshwar Arasu &amp; e-Portfolio</title>
         <meta name="description" content="We are a Digital Agency based in Singapore, Bali and Jakarta, offering Website Design &amp; Development, Mobile App Development, Corporate Branding">
 
          
